# Nmap Changelog ($Id$); -*-text-*-
o [Zenmap] The Zenmap crash handler now instructs you to mail in crash
  information to nmap-dev. [Colin Rice]

o Added IPv6 Neighbor Discovery ping. This is the IPv6 analog to IPv4
  ARP scan. It is the default ping type for local IPv6 networks.
  [Weilin]

o [NSE] Added smtp-vuln-cve2011-1764 script, which checks if the Exim
  SMTP server is vulnerable to the DKIM Format String vulnerability
  (CVE-2011-1764). [Djalal]

o Added the broadcast-ping script which sends icmp packets to broadcast 
  addresses on the selected network interface, or all ethernet interfaces if 
  none is selected. It has the option to add the discovered hosts as targets. 

o [NSE] Applied patch from Chris Woodbury that adds the following additional
  information to the output of smb-os-discovery:
  + Forest name
  + FQDN
  + NetBIOS computer name
  + NetBIOS domain name

o [Ncat] Ncat now supports IPV6 addresses by default without the -6 flag.
  Additionally ncat listens on both :: and localhost when passed
  -l, or any other listening mode unless a specific listening address is
  supplied.

o [NSE] Split script db2-discover into two scripts, adding a new
  broadcast-db2-discover script. This script attempts to discover DB2
  database servers through broadcast requests. [Patrik Karlsson]

o Fixed broken XML output in the case of timed-out hosts; the
  enclosing host element was missing. The fix was suggested by Rémi
  Mollon.

o [NSE] Added ftp-vuln-cve2010-4221 script, which checks if the ProFTPD
  server is vulnerable to the Telnet IAC stack overflow vulnerability
  (CVE-2010-4221). [Djalal]

o [NSE] Added ftp-vsftpd-backdoor, which detects a backdoor that was introduced
  into vsftpd-2.3.4 source code distributions. [Daniel Miller]

Nmap 5.59BETA1 [2011-06-30]

o [NSE] Added 40 scripts, bringing the total to 217!  You can learn
  more about any of them at http://nmap.org/nsedoc/. Here are the new
  ones (authors listed in brackets):
