@@ -27,6 +27,8 @@ Entry { filename = "citrix-enum-servers.nse", categories = { "discovery", "safe"
 Entry { filename = "couchdb-databases.nse", categories = { "discovery", "safe", } }
 Entry { filename = "couchdb-stats.nse", categories = { "discovery", "safe", } }
 Entry { filename = "creds-summary.nse", categories = { "auth", "default", "safe", } }
+Entry { filename = "cvs-brute-repository.nse", categories = { "auth", "intrusive", } }
+Entry { filename = "cvs-brute.nse", categories = { "auth", "intrusive", } }
 Entry { filename = "daap-get-library.nse", categories = { "discovery", "safe", } }
 Entry { filename = "daytime.nse", categories = { "discovery", "safe", } }
 Entry { filename = "db2-das-info.nse", categories = { "discovery", "safe", "version", } }
